Updated active certifications section.

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                             <div id="active-certs" class="accordion-collapse collapse" aria-labelledby="active-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><a href="https://www.credly.com/badges/a6ab7255-8c67-4a30-ac98-711d3e53cb7e" target="_blank">Google Cloud Certified Generative AI Leader</a><br>January 12, 2026 - January 12, 2029</li>
                                         <li><a href="https://certifications.certnexus.com/55ae4d75-41ee-4234-9b9b-7ee6a301ca0c" target="_blank">CertNexus Certified Ethical Emerging Technologist (CEET)</a><br>October 9, 2025 - October 9, 2028</li>
                                         <li><a href="https://www.credly.com/badges/09b34f96-c307-423c-b15a-2f03ae9b94d7" target="_blank">App Development with Swift Associate</a><br>July 18, 2025 - July 18, 2030</li>
                                         <li><a href="https://www.credly.com/badges/1bf364e5-4e2c-4c04-9f74-764c1deb8c04" target="_blank">App Development with Swift Certified User</a><br>July 9, 2025 - July 9, 2030</li>
@@ -187,7 +188,7 @@
                                         <li><a href="https://www.credly.com/badges/c6bd3fca-98d5-47b6-bd96-d520f2dba0f6" target="_blank">Splunk Core Certified Power User</a><br>July 20, 2023 - July 20, 2026</li>
                                         <li><a href="https://www.credly.com/badges/2db171e7-4605-4000-a2a0-5fdc5a8552d1" target="_blank">Splunk Core Certified User</a><br>July 13, 2023 - July 20, 2026</li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/2/F33CC705-FC46-495E-B84D-B2DC8F5B932F?162" target="_blank">IASSC&#174; Certified Yellow Belt&trade; ICYB&trade;</a><br>May 19, 2023 - May 19, 2026</li>
-                                        <li><a href="https://www.credly.com/badges/89c06805-bcb1-4b88-9f3c-19ecaf0f4841" target="_blank">Google Cloud Certified Cloud Digital Leader</a><br>April 3, 2023 - April 3, 2026</li>
+                                        <li><a href="https://www.credly.com/badges/89c06805-bcb1-4b88-9f3c-19ecaf0f4841" target="_blank">Google Cloud Certified Cloud Digital Leader</a><br>April 3, 2023 - January 12, 2029</li>
                                         <li><a href="https://www.credly.com/badges/630ff6cc-7848-48e3-acce-aac2d8017a5e" target="_blank">AWS Certified Developer Associate (DVA-C01)</a><br>February 22, 2023 - February 22, 2026</li>
                                         <li><a href="https://www.credential.net/b6f7aa87-a295-4502-a4f7-34ef45cd3e89#acc.BZfyYF9D" target="_blank">CIW Web Foundations Associate (1D0-610)</a><br>December 26, 2022 - October 1, 2027</li>
                                         <!-- <li><a href="https://www.credly.com/badges/a6ac54a5-e4f8-4cc0-890d-d6b9d9db91ec" target="_blank">Linux Foundation Certified IT Associate (LFCA)</a><br>December 30, 2022 - December 30, 2025</li> -->
