--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
                                     </ul>
                                     <p>NIC Hawaii</p>
                                     <ul>
-                                        <li><strong>Java Developer</strong><br />October 2016 - October 2019<br />September 2015 - May 2016</li>
+                                        <li><strong>Java Developer</strong><br />October 24, 2016 - October 4, 2019<br />September 3, 2015 - May 16, 2016</li>
                                     </ul>
                                     <p>University of Hawaii</p>
                                     <ul>
-                                        <li><strong>Java Web Developer</strong><br />March 2014 - May 2015</li>
+                                        <li><strong>Java Web Developer</strong><br />March 24, 2014 - May 2015</li>
                                     </ul>
                                     <p>Referentia Systems Incorporated</p>
                                     <ul>
-                                        <li><strong>Software Engineer</strong><br />August 2011 - December 2013</li>
+                                        <li><strong>Software Engineer</strong><br />August 8, 2011 - December 2013</li>
                                     </ul>
                                 </div>
                             </div>
