Updated certification expenses spreadsheet.

--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
                             <div id="lifetime-certs" class="accordion-collapse collapse" aria-labelledby="lifetime-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><a href="" target="_blank">GDPR Foundation</a></li>
                                         <li><a href="https://www.credential.net/f12a35b6-cda6-4568-a209-a59f95b3f6cc" target="_blank">Information Security Management (ISO/IEC 27001) Foundation</a></li>
                                         <li><a href="https://www.credly.com/badges/df7fa22b-5732-460a-ad7a-6fa49f371fe6" target="_blank">Professional Scrum Developer&trade; I (PSD I)</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/7402E7B0-B659-4286-82A2-262A0809B675" target="_blank">PeopleCert Scrum Product Owner I</a></li>
