Added PSPO-AIE certification.

--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
                             <div id="lifetime-certs" class="accordion-collapse collapse" aria-labelledby="lifetime-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><a href="https://www.credly.com/badges/02ebf74b-ddec-4e1d-8c25-236921d3e832" target="_blank">Professional Scrum Product Owner - AI Essentials (PSPO-AIE)</a></li>
                                         <li><a href="https://www.credential.net/202d604a-9872-4637-ad1d-002a4e35a7e1" target="_blank">GDPR Foundation</a></li>
                                         <li><a href="https://www.credential.net/f12a35b6-cda6-4568-a209-a59f95b3f6cc" target="_blank">Information Security Management (ISO/IEC 27001) Foundation</a></li>
                                         <li><a href="https://www.credly.com/badges/df7fa22b-5732-460a-ad7a-6fa49f371fe6" target="_blank">Professional Scrum Developer&trade; I (PSD I)</a></li>
