Updated home page.

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             <div id="lifetime-certs" class="accordion-collapse collapse" aria-labelledby="lifetime-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
-                                        <li><a href="" target="_blank">AI Governance, Risk &amp; Compliance (GRC) Professional</a></li>
+                                        <li><a href="https://www.credential.net/04ad74e2-0a19-4033-9ad4-33e65e70c443" target="_blank">Certified AI GRC Professional</a></li>
                                         <li><a href="https://www.credential.net/ae4642de-a8b2-4ccb-a17f-f4723b762f89" target="_blank">AI Governance (ISO/IEC 38507) Foundation</a></li>
                                         <li><a href="https://www.credential.net/1ba87962-cba0-4d58-8e48-f84106c91a2e" target="_blank">SRE Foundation</a></li>
                                         <li><a href="https://www.credly.com/badges/02ebf74b-ddec-4e1d-8c25-236921d3e832" target="_blank">Professional Scrum Product Owner - AI Essentials (PSPO-AIE)</a></li>
